# leezencounter

./: .gitmodules  LICENCE  NOTICE  README.md  opencv_imageparsing_readme.md
.github/actions/setup-python-env/: action.yaml
.github/workflows/: py-code-style.yaml  pypi-dependency-review.yaml  yml-code-style.yaml
cad/: tinayiot_case.stl
model-deployment/: .gitignore  README.md  model_deployment.ipynb  pyproject.toml  setup.sh
model-deployment/calib_images/: README.md
model-deployment/calib_images_compressed/: README.md
model-deployment/coco_detect/: CMakeLists.txt  Kconfig  coco_detect.cpp  coco_detect.hpp
model-deployment/coco_detect/generate_onnx/: export_onnx.py
model-deployment/coco_detect/models/: yolo11n.json
model-deployment/model_conversion/: __main__.py  cli.py  onnx_converter.py  prepare_data.py  requirements.txt  run_evaluation.py  utils.py  visualize_evaluation.py  yolo_converter.py
model-deployment/model_conversion/core/: constants.py  paths.py
model-deployment/model_conversion/utils/: data.py  data_preparation.py  model_evaluation.py  onnx_converter.py  yolo_converter.py
model-deployment/model_deployment/calibration_datasets/: calib_yolo11n
model-deployment/yolo11_detect/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
model-deployment/yolo11_detect/components/arduino/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
model-deployment/yolo11_detect/components/arduino/libraries/RadioLib/: CMakeLists.txt
model-deployment/yolo11_detect/components/arduino/libraries/RadioLib/src/: Module.cpp
model-deployment/yolo11_detect/main/: BleClient.cpp  BleClient.h  CMakeLists.txt  app_main.cpp  camera_capture.cpp  camera_capture.hpp  config.h  idf_component.yml  main.cpp  sd_handling.cpp  sd_handling.h
model-training/: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  datasets.dvc  env.skel  models.dvc  pyproject.toml
model-training/.dvc/: config
model-training/configs/: yolo11n_bike_and_saddle_with_augmentation.yaml  yolo11n_bike_with_augmentation.yaml  yolo11n_bike_with_augmentation_custom_loss_preprocessed.yaml  yolo11n_frozen_saddle_with_augmentation.yaml  yolo11n_saddle_detection.yaml  yolo11n_saddle_with_augmentation.yaml  yolo11n_sample_config.yaml  yolo12n_bikes_and_saddles_with_augmentation.yaml
model-training/configs/qat/: yolo11n_qat_sample_config.yaml
model-training/data/: .gitignore  data.dvc
model-training/model_training/: __main__.py  cli.py  qat.py  trainer.py
model-training/model_training/core/: constants.py  paths.py  schemas.py
model-training/model_training/utils/: datasets.py  quantization.py  validators.py
model-training/models/: models.dvc
sketches/: README.md  camera_capture.ino
sketches/camera_capture/: camera_capture.ino
sketches/camera_capture_v2_bydatetime/: README.md  camera_capture.ino
sketches/camera_capture_w_calibration/: camera_capture_w_calibration.ino
sketches/camera_server/: camera_server.ino  readme.md
sketches/lorawan_send/: LoRaWAN_Script.ino  README.md  config.h
webapplication/: .env.example  README.md  example-data.ts  package-lock.json  package.json  types.ts
webapplication/actions/: add-leezenbox.tsx  delete-leezenbox.tsx  get-leezenbox-data.tsx  get-leezenbox-mock-data.tsx  get-leezenboxs.tsx  get-participants.tsx
webapplication/app/(frontend)/: globals.css  layout.tsx  page.tsx
webapplication/app/(frontend)/dashboard/: page.tsx
webapplication/app/(frontend)/dashboard/components/: leezenboxes-overview.tsx
webapplication/app/(frontend)/leezenboxes/: page.tsx
webapplication/app/(frontend)/leezenboxes/[leezenboxId]/: page.tsx
webapplication/app/(frontend)/leezenboxes/[leezenboxId]/components/: delete-leezenbox-button.tsx
webapplication/app/(frontend)/leezenboxes/components/: leezenbox-card.tsx  leezenbox-overview.tsx
webapplication/app/(frontend)/map/: page.tsx
webapplication/app/(frontend)/map/components/: AddLeezenboxButton.tsx
webapplication/app/(frontend)/tutorial-session/participants/: page.tsx
webapplication/app/api/cron/: route.ts
webapplication/app/api/leezenbox/: route.ts
webapplication/app/api/leezenbox/[leezenbox-id]/: route.ts
webapplication/app/api/ttn-data/: route.ts
webapplication/backend/: package-lock.json  package.json
webapplication/backend/src/: index.ts
webapplication/components/: add-leezenbox-sheet.tsx  app-sidebar.tsx  border-box.tsx  homepage-section.tsx  icon-button.tsx  leezenbox-chart.tsx  leezenbox-image.tsx  leezenbox-map.tsx  leezenbox-stat-card.tsx  tilted-card.tsx
webapplication/components/ui/: sheet.tsx
webapplication/database/: create_ttn_data_table.sql  setup_database.sql
webapplication/frontend/: example-data.ts  package-lock.json  package.json  types.ts
webapplication/frontend/.next/: trace
webapplication/frontend/actions/: get-leezenboxs.tsx  get-participants.tsx
webapplication/frontend/app/: globals.css  layout.tsx  page.tsx
webapplication/frontend/app/(frontend)/: layout.tsx  page.tsx
webapplication/frontend/app/(frontend)/dashboard/components/: leezenboxes-overview.tsx
webapplication/frontend/app/(frontend)/leezenboxes/: page.tsx
webapplication/frontend/app/(frontend)/tutorial-session/components/: participant-card.tsx
webapplication/frontend/app/api/cron/: route.ts
webapplication/frontend/app/api/participants/: route.ts
webapplication/frontend/app/dashboard/: page.tsx
webapplication/frontend/app/leezenboxes/: page.tsx
webapplication/frontend/app/leezenboxes/[leezenboxId]/: page.tsx
webapplication/frontend/app/leezenboxes/[leezenboxId]/components/: border-box.tsx  leezenbox-chart.tsx
webapplication/frontend/app/leezenboxes/components/: leezenbox-card.tsx
webapplication/frontend/app/map/: page.tsx
webapplication/frontend/app/tutorial-session/components/: navbar.tsx  participant-card.tsx
webapplication/frontend/app/tutorial-session/participants/: page.tsx
webapplication/frontend/components/: app-sidebar.tsx  breadcumb-ui.tsx  dynamic-leezenbox-map.tsx  leezenbox-map.tsx  linear-chart.tsx
